--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='7ftsy9p_^0l99yoh-@0cra8*28va=l6e)72_aidt1gf8o@f3m$'
 DEBUG=True
-DB_NAME='instagram'
+DB_NAME='insta'
 DB_USER='abdirahman'
 DB_PASSWORD='1234'
 DB_HOST='127.0.0.1'
