--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2018.4.16
 chardet==3.0.4
+config==0.4.0
 confusable-homoglyphs==3.1.1
 dj-database-url==0.5.0
 Django==1.11
@@ -13,7 +14,9 @@ django-stringfield==0.3.0
 gunicorn==19.9.0
 idna==2.7
 Pillow==5.2.0
+pkg-resources==0.0.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.6.1
 python-dateutil==2.7.3
 python-decouple==3.1
 pytz==2018.5
