--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_USER='abdirahman'
 DB_PASSWORD='1234'
 DB_HOST='127.0.0.1'
 MODE='dev'
-ALLOWED_HOSTS=['insta-manka.herokuapp.com','localhost','127.0.0.1']
+ALLOWED_HOSTS='insta-manka.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 EMAIL_USE_TLS=True
 EMAIL_HOST='smtp.gmail.com'
